UI: Fix sidebar layout shifts with `defaultOpen` option

--- a/packages/ui/css/preset.css
+++ b/packages/ui/css/preset.css
@@ -72,6 +72,12 @@
   }
 }
 
+@property --radix-collapsible-content-height {
+  syntax: '<length>';
+  inherits: false;
+  initial-value: 0px;
+}
+
 @utility container {
   margin-inline: auto;
   padding-inline: 1rem;
